log
Mon 26 Sep 2022 12:11:45 AM UTC: 
 tests:  1|8
total_score: 0/70
244ff85
Mon 26 Sep 2022 12:15:25 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
50ed80a
Mon 26 Sep 2022 12:16:04 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
07fa66d
Mon 26 Sep 2022 12:17:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
8de1377
